--- a/src/changelog.txt
+++ b/src/changelog.txt
@@ -1,4 +1,5 @@
 build 19
+added WIMApply-Universal.bat script. This will to RE-IMAGE System(Boot) partitions
 removed second prompt on WinInstall.bat System partition prompt
 removed second prompt on WinInstallVHDX.bat system and windows partition prompts during POSTINSTALL
 fixed asking for GB of VDISKS Partition too soon in WinInstallVHDX.bat
