--- a/changelog.txt
+++ b/changelog.txt
@@ -29,11 +29,11 @@ Changelog 1.0.12 (BUG MUNCHER II):
 - Changed LoadConfig.bat now gets called in WinPE as most of the config options are now both for WinPE and Windows
 
 Issues:
-- Make LinkFinder.vbs that spits out all junctions(mount points), symlinkd, symlink with target quicker then DirSafe.vbs
-- Make an EXE Version Of SafeDir.vbs to ensure speed when possible
+- dir /S recursion issue
 - Almost all Batch For Commands need to be changed to type if it's reading from a file that may contain special characters
 
 MASTER TODOO:
 - dir /S recursion issue
+- PatchJLinks.vbs instead of looking in reverse for '[' look for the next ":" and then trace back in reverse to "["
 - Make WinInstallVHDX.bat work in WinPE again
 - Improve Logic of WinInstallVHDX.bat's VDISK location in WinPE
