--- a/changelog.txt
+++ b/changelog.txt
@@ -29,12 +29,13 @@ Changelog 1.0.12 (BUG MUNCHER II):
 - Changed LoadConfig.bat now gets called in WinPE as most of the config options are now both for WinPE and Windows
 
 Issues:
-- dirsafe.exe make sure it's running from %SYSTEMROOT% if not winpe
-- finish dirsafe.exe
+- finish dirsafe.exe 
+- WDI search should search only for OneDrive ReparsePoint tags and not file attributes
+- Option for All offline files or just OneDrive ReparsePoints outside of the OneDrive folder
 - Almost all Batch For Commands need to be changed to type if it's reading from a file that may contain special characters
 
 MASTER TODOO:
 - dir /S recursion issue
-- PatchJLinks.vbs instead of looking in reverse for '[' look for the next ":" and then trace back in reverse to "["
+- PatchJLinks.vbs use parseable search from DirSafe.exe
 - Make WinInstallVHDX.bat work in WinPE again
 - Improve Logic of WinInstallVHDX.bat's VDISK location in WinPE
