--- a/changelog.txt
+++ b/changelog.txt
@@ -30,6 +30,7 @@ Changelog 1.0.12 (BUG MUNCHER II):
 
 Issues:
 - finish dirsafe.exe 
+- Dection of which DirSafe.exe to use and extraction to %SYSTEMROOT% if not winpe and cloud compat fails
 - WDI search should search only for OneDrive ReparsePoint tags and not file attributes
 - Option for All offline files or just OneDrive ReparsePoints outside of the OneDrive folder
 - Almost all Batch For Commands need to be changed to type if it's reading from a file that may contain special characters
