--- a/changelog.txt
+++ b/changelog.txt
@@ -31,10 +31,12 @@ Changelog 1.0.12 (BUG MUNCHER II):
 - Changed LoadConfig.bat now gets called in WinPE as most of the config options are now both for WinPE and Windows
 
 Issues:
+- PatchJLinks.vbs needs attribute values to use for the dir command so make a new parameter to output values with a whitelist of allowed values
+- PatchJLinks.vbs crashes if there is no ":" found in the Old Path
 - Option for All offline files O|M|Q when enabled(additional search to WDI and dropping reparsepoints of main search)
 - Almost all Batch For Commands need to be changed to type if it's reading from a file that may contain special characters
 
 MASTER TODOO:
-- ShortcutFixer.bat & PatchJLinks.vbs use DirSafe.exe parseable format
+- PatchJLinks.vbs finish
 - Make WinInstallVHDX.bat work in WinPE again
 - Improve Logic of WinInstallVHDX.bat's VDISK location in WinPE
