--- a/changelog.txt
+++ b/changelog.txt
@@ -31,11 +31,7 @@ Changelog 1.0.12 (BUG MUNCHER II):
 - Changed LoadConfig.bat now gets called in WinPE as most of the config options are now both for WinPE and Windows
 
 Issues:
-- Check Why WinPE is assigning Drive letters to FAT32 Boot Partitions
-- Test ShortCutFixer.bat
+- Batch For Loop Issues when Iterating through any PATHS all Scripts need to change to type
 - Option for All offline files O|M|Q when enabled(additional search to WDI and dropping reparsepoints of main search)
-- Almost all Batch For Commands need to be changed to type if it's reading from a file that may contain special characters
-
-MASTER TODOO:
 - Make WinInstallVHDX.bat work in WinPE again
 - Improve Logic of WinInstallVHDX.bat's VDISK location in WinPE
