--- a/changelog.txt
+++ b/changelog.txt
@@ -9,6 +9,7 @@ Changelog 1.0.12 (BUG MUNCHER II):
 - Fixed Junctions, Symlinks, Shortcuts, Hard links getting messed with when capturing or applying the image
 - Fixed having the S flag for del command when it was working with single file deletions and made the code more readable
 - Fixed CleanupPar.bat (fixed always having c drive as true, fixed check logic method and main for loop)
+- Fixed Batch for loops special characters such as $ in file paths would mess up the scripts in WinPE. We Use Type command instead of usebaq and builtin forloop
 - Added Dynamic Exclusion Lists Capture/Apply Configs that change based on relative path of the target drive for example \Windows\System32 and the target is \Windows\ it would change to \System32
 - Added Static exclusions that start with S:\target instead of (C:\target or \target) this is implemented for both Apply and Capture Exclusions. This means it will always be the same path and always get added to the generated exclusion list
 - Added Config Option OptimizedWIMCapture when true if no onedrive accounts are detected it will skip the scanning of the target drive/dir
@@ -29,9 +30,3 @@ Changelog 1.0.12 (BUG MUNCHER II):
 - Improved WIM-Merge.bat, WIM-Extract.bat and ESD2WIM.bat in how it gets the WIM Size. It also fixes the error messages when the index > wim index size
 - Improved call PP more often
 - Changed LoadConfig.bat now gets called in WinPE as most of the config options are now both for WinPE and Windows
-
-Issues:
-- Batch For Loop Issues when Iterating through any PATHS all Scripts need to change to type
-- Option for All offline files O|M|Q when enabled(additional search to WDI and dropping reparsepoints of main search)
-- Make WinInstallVHDX.bat work in WinPE again
-- Improve Logic of WinInstallVHDX.bat's VDISK location in WinPE
