--- a/changelog.txt
+++ b/changelog.txt
@@ -10,6 +10,7 @@ Changelog 1.0.12 (BUG MUNCHER II):
 - Fixed having the S flag for del command when it was working with single file deletions and made the code more readable
 - Fixed CleanupPar.bat (fixed always having c drive as true, fixed check logic method and main for loop)
 - Fixed Batch for loops special characters such as $ in file paths would mess up the scripts in WinPE. We Use Type command instead of usebaq and builtin forloop
+- Fixed forcedelete.bat fallowing junctions / symlink dirs which would result in unintended files being deleted. It now Removes the Junction and SYMLINKD Dirs before starting the proccess. And I checked the del command with the flags I had deleted the link itself and not the file it was linking to
 - Added Dynamic Exclusion Lists Capture/Apply Configs that change based on relative path of the target drive for example \Windows\System32 and the target is \Windows\ it would change to \System32
 - Added Static exclusions that start with S:\target instead of (C:\target or \target) this is implemented for both Apply and Capture Exclusions. This means it will always be the same path and always get added to the generated exclusion list
 - Added Config Option OptimizedWIMCapture when true if no onedrive accounts are detected it will skip the scanning of the target drive/dir
